--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>UK is a dangerous place!!</title>
 </head>
 <body>
 Police report in the UK
 <br>
 {{#policedata}}
 <br>
-When: {{month}}
-<br>
-Location: {{#location}} {{street}} {{/location}}
+Status: {{#outcome_status}} {{category}} {{/outcome_status}}
 <br>
 Category: {{category}}
 <br>
-Status: {{#outcome_status}} {{category}} {{/outcome_status}}
+Location: {{#location}} {{street}} {{/location}}
+<br>
+When: {{month}}
 <br>
 {{/policedata}}
 </body>
